# grpo-lite

./: README.md  SOLUTION.md  WRITEUP.md  analyze_results.py  compare_models.py  evaluator.py  evaluator_old.py  linux_commands.MD  llms.py  main.py  model_comparison.txt  plotter.py  pyproject.toml  requirements.txt  rl_datasets.py  sample_completions.txt  test_original.py  utils.py
SFT/: generate_sft_dataset.py  gsm8k_train_1000.json  sft_dataset.json  sft_train.py
creative_writing/: evaluator.py  lora_main.py  prompts.json  rl_datasets.py
creative_writing/main_helpers/: generation.py  loss.py  scoring.py
local_testing/: test_evaluator.py  test_evaluator_new.py  test_evaluator_new_v2.py
