[project]
name = "grpo-lite"
version = "0.1.0"
description = "A self-contained GRPO training framework"
requires-python = ">=3.10"

dependencies = [
    "torch==2.12.0",
    "transformers==4.48.2",
    "datasets==3.2.0",
    "accelerate==1.3.0",
    "tqdm>=4.67",
    "numpy>=1.24",
    "matplotlib>=3.5",
    "word2number>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[tool.hatch.build.targets.wheel]
packages = ["."]